# RAG-LangGraph

./: .env-example  README.md  agent.py  app.py  expirements.py  ingest.py  main.py  pyproject.toml  requirements.txt  test.py
faiss_index/: index.faiss  index.pkl
sample_docs/: ai_concepts.txt
