[project]
name = "langchain-with-rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "faiss-cpu>=1.14.3",
    "langchain>=1.3.12",
    "langchain-community>=0.4.2",
    "langchain-google-genai>=4.2.7",
    "langchain-groq>=1.1.3",
    "langgraph>=1.2.9",
    "python-dotenv>=1.2.2",
    "streamlit>=1.59.1",
]
